[gd_scene load_steps=24 format=2]

[ext_resource path="res://Placeholders-01/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sword.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Player_00006.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player/Player_00007.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Player_00003.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/Player_00004.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player/Player_00001.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Player_00012.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/Player_00011.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/Player_00013.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/Player_00000.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Player_00005.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Player_00009.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/Player_00010.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Player_00002.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Player_00008.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 16 )

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_player:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.188235, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.188235, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.188235, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.188235, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.188235, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_anim:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.137255, 0.137255, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.137255, 0.137255, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.137255, 0.137255, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.137255, 0.137255, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.137255, 0.137255, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 14.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )
speed = 400
max_speed = 1000
jump_height = 1400
sword_duration = 0.2
sword_delay = 0.4
hurt_push = Vector2( -3000, -400 )

[node name="Sprite_player" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -96 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -80 )
shape = SubResource( 1 )

[node name="Sword" type="Area2D" parent="."]
position = Vector2( 48, -80 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite_sword" type="Sprite" parent="Sword"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2( 64, 0 )
shape = SubResource( 2 )

[node name="Timer_Sword" type="Timer" parent="Sword"]

[node name="Timer_Sword_delay" type="Timer" parent="Sword"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="Timer_Hurt_Delay" type="Timer" parent="."]
one_shot = true

[node name="enemy_attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_attack"]
modulate = Color( 0.0470588, 0, 0.380392, 1 )
position = Vector2( 0, -64 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="player_anim" type="AnimatedSprite" parent="."]
position = Vector2( 0, -96 )
frames = SubResource( 6 )
[connection signal="timeout" from="Sword/Timer_Sword" to="." method="_on_Timer_Sword_timeout"]
[connection signal="timeout" from="Sword/Timer_Sword_delay" to="." method="_on_Timer_Sword_delay_timeout"]
[connection signal="timeout" from="Timer_Hurt_Delay" to="." method="_on_Timer_Hurt_Delay_timeout"]
[connection signal="area_entered" from="enemy_attack" to="." method="_on_enemy_attack_area_entered"]
